deploy/kustomize/overlays/e2e/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apifrontend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: apifrontend
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
